--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="15dip" />
-            <stroke android:width="1dip" android:color="#9E9E9E" />
-            <gradient android:angle="-90" android:startColor="#9E9E9E" android:endColor="#9E9E9E"  />
-        </shape>
-    </item>
+
+    <item android:drawable="@drawable/list_row_bg" android:state_pressed="false" android:state_checked="false"/>
+    <item android:drawable="@drawable/list_row_bg_hover" android:state_pressed="true"/>
+    <item android:drawable="@drawable/list_row_bg_hover" android:state_pressed="false" android:state_checked="true"/>
 
 
 </selector>
