--- a/app/src/main/res/drawable/list_row_bg.xml
+++ b/app/src/main/res/drawable/list_row_bg.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners android:radius="10dip"/>
     <gradient
         android:angle="270"
-        android:endColor="#007214"
-        android:startColor="#00a817" />
+        android:endColor="#2f3ddc"
+        android:startColor="#2f3ddc" />
 </shape>
