--- a/app/src/main/res/drawable/list_row_bg_hover.xml
+++ b/app/src/main/res/drawable/list_row_bg_hover.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    >
+    android:shape="rectangle"  >
+
+        <corners android:radius="20dip" />
     <gradient
         android:angle="270"
-        android:endColor="#e4ff24"
-        android:startColor="#ff0f00"/>
+        android:endColor="#151514"
+        android:startColor="#cef7eb"/>
 </shape>
