--- a/app/src/main/res/layout/fragment_custom_profile.xml
+++ b/app/src/main/res/layout/fragment_custom_profile.xml
@@ -4,7 +4,9 @@
     android:id="@+id/principal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
+    <!-- NOMBRE -->
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -22,6 +24,8 @@
             android:textColor="@color/theme_primary" />
     </LinearLayout>
 
+    <!-- IMAGEN -->
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -38,14 +42,232 @@
             android:layout_marginStart="149dp" />
     </LinearLayout>
 
+    <!-- CALIDICACION -->
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="true"
         android:orientation="horizontal">
 
-       <!-- Falta renderizar las demas cosas pero vas bien lindo :)-->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
 
     </LinearLayout>
+
+    <!-- DESCRIPCION -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/AppTheme"
+            android:textSize='20sp'
+            android:layout_marginLeft="25sp"
+            android:textColor="@color/theme_primary" />
+    </LinearLayout>
+
+    <!-- DIRECCION -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='20sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary"
+                android:text="@string/direccion" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/addres"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='15sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='15sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- PAGINA WEB -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='20sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary"
+                android:text="@string/direccion" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/webpage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='15sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- VIDEO -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='20sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary"
+                android:text="@string/video" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/AppTheme"
+                android:textSize='15sp'
+                android:layout_marginLeft="25sp"
+                android:textColor="@color/theme_primary" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- OPCIONES -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/llamar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/llamar"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/theme_components"
+                android:background="@drawable/button"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/calificar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/calificar"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/theme_components"
+                android:background="@drawable/button"/>
+        </LinearLayout>
+    </LinearLayout>
+
+
 
 </LinearLayout>
