--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:colorPrimary">#212121</item>
-        <item name="android:colorPrimaryDark">#9E9E9E</item>
-        <item name="android:navigationBarColor">#212121</item>
-        <item name="android:colorAccent">#3326dd</item>
-        <item name="android:colorControlActivated">#FFD600</item>
-        <item name="android:colorControlNormal">#3326dd</item>
+
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:colorPrimary">@color/theme_primary</item>
+        <item name="android:colorPrimaryDark">@color/theme_dark</item>
+        <item name="android:navigationBarColor">@color/theme_primary</item>
+        <item name="android:colorAccent">@color/theme_accent</item>
+        <item name="android:colorControlActivated">@color/theme_components</item>
+        <item name="android:colorControlNormal">@color/theme_accent</item>
     </style>
+
+
+
+
 </resources>
